props for viewDetails finally work from parent-Component,  fixed issue with Modal-visibility on Pageload, prevented Content Reflow for Lazy-Loading Images, erased unnessesary stateVariables, styled viewDetails slightly, integrated arrow for future skip-Function

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,12 @@
     padding: 0;
 }
 
+
+.MuiGrid-spacing-xs-4 {
+    margin: -32px !important ;
+}
+
+
 html {
     box-sizing: border-box;
     margin: 0 auto;
